new change on greatest

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 
 <div>
     <h1 class="text-white text-center text-2xl ">Meet the team</h1>
-    <p class="text-center text-white">For all your gratest desires and needs</p>
+    <p class="text-center text-white">For all your greatest desires and needs</p>
 
 <div class="md:flex  justify-center items-center h-screen">
     <div class="box shadow-2xl   ">
