--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
 <div class="md:flex justify-center my-10">
     <img src="images/profile.jpg" alt="people" class="mx-5 shadow-slate-800 sm:ml-5" width="400px" height="500px"> 
-    <p class="text-white  text-start text-4xl mx-20 my-36">We are here to fulfil your gratest desires come and we solve all your problems</p>
+    <p class="text-white  text-start text-4xl mx-20 my-36">We are here to fulfil your greatest desires come and we solve all your problems</p>
    
 </div>
 
